--- a/ToDo/JS/codereading_project/index.html
+++ b/ToDo/JS/codereading_project/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>js & ts ToDo</title>
+  <title>Create ToDo</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <div class="wrap">
+    <div class="todo-create">
+      <h1>Codereading ToDo</h1>
+      <input type="text" class="create-input js-todo-create" placeholder="오늘의 할일을 입력하세요">
+      <button type="button" class="btn js-create-btn">Enter</button>
+    </div>
+    <div class="todo-list js-todo-list">
+      <ul>
+
+      </ul>
+    </div>
+  </div>
+
+  <script src="./js/TodoCreateInput.js"></script>
 </body>
 </html>
