feat: ToDos 의 입력기능 추가

--- a/ToDo/JS/codereading_project/index.html
+++ b/ToDo/JS/codereading_project/index.html
@@ -10,19 +10,16 @@
 </head>
 <body>
   <div class="wrap">
-    <div class="todo-input">
+    <div class="todo-input-area">
       <h1>JavaScript ToDo</h1>
       <form class="js-todo-form">
-        <input type="text" placeholder="할일을 입력하세요" class="js-todo-input">
-        <input type="submit">
+        <input type="text" placeholder="할일을 입력하세요" class="todo-add-input js-todo-input">
       </form>
     </div>
     <div class="todo-list">
-      <ul class="js-todo-ul">
-        <li>list</li>
-      </ul>
+      <ul class="todo-ul js-todo-ul"></ul>
     </div>
   </div>
-  <script src="./js/TodoCreateInput.js"></script>
+  <script src="./js/TodoCreateList.js"></script>
 </body>
 </html>
